# bulletmind

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .plan  CMakeLists.txt  Makefile  NOTES.md  README.md  bitwise.h  build-clang-debug-x86.bat  build.bat  c99defs.h  clang-x86-debug-build.bat  clang-x86-debug-copydeps.bat  clang-x86-release-build.bat  cloc.bat  cmake-debug-x64.bat  cmake-debug-x86.bat  cmake-release-x64.bat  cmake-release-x86.bat  code-style.bat  command.c  command.h  entity.c  entity.h  font.c  font.h  history.txt  imgfile.c  imgfile.h  input.c  input.h  main.c  main.h  run.bat  system.c  system.h  timing.c  timing.h  (+1 more)
assets/: 7px_font.tga  Sprite-0001.ase  Sprite-0001.json  assets.toml  bullet_ps.tga  bullet_rgba.tga  font_7px.tga  font_7px_rgba.tga  grass_dirt_block.tga  machines_floor_16x16.tga  palm_tree2_16x16.tga  palm_tree_16x16.tga  pos_color.ps.hlsl  pos_color.vs.hlsl  roboid.toml  shadowy_wall_16x16.tga  solid.vs.hlsl  ss_crystal_nt.json  ss_crystal_nt.tga  ss_player.json  ss_player.tga  ss_player.toml  ss_player_rgba.tga  ss_rebel_nt.json  ss_rebel_nt.tga  ss_skelly.json  ss_skelly.tga  ss_skelly.toml  tiled_wall_16x16.tga  tiled_wall_64x64.tga
assets/aseprite/: cave_lighter.aseprite  roboid.aseprite  torii_gate.aseprite
assets/image/: machines_floor_64x64.tga  metro_720p.tga  rgba_720p.tga  ss_player.toml  ss_roboid.tga  ss_skelly.tga
assets/shader/: fullscreen.vs.hlsl  pos_color.vs.hlsl  pos_color_instanced.vs.hlsl  solid.ps.hlsl
config/: assets.toml
cpp/: main.cpp
game/: CMakeLists.txt  app.c  app.h  asset.c  asset.h  command.c  engine.h  entity.c  main.c  scene.c  scene.h
game/assets/: assets copy.toml  assets.toml
game/assets/image/: roboid.json  ss_player.json  ss_player.tga  ss_player_rgba.tga  ss_skelly.json
game/assets/shader/: pos_color.ps.hlsl  pos_color_instanced.ps.hlsl  solid.ps.hlsl  solid.vs.hlsl
libmind/: CMakeLists.txt  audio.c  engine.c  engine.h  entity.c  entity.h  font.c  font.h  main.c.old.2  render.c  render.h  resource.c  resource.h  sprite.c  sprite.h
libmind/core/: binary.h  buffer.c  buffer.h  file_io.c  file_io.h  hashmap.c  hashmap.h  logger.c  logger.h  mem_align.c  mem_align.h  memory.c  memory.h  rect.h  string.c  string.h  system.h  timecode.c  timecode.h  toml_config.h  types.h  vector.h
libmind/gfx/: cimgui_defs.h  enums.h  geometry.h  gfx.c  gfx.h  gfx_d3d11.c  gfx_d3d11.h  gfx_d3d12.c  gfx_d3d12.h
libmind/gui/: gui.h  gui_sdl2.c  key_state.c  key_state.h
libmind/math/: bounds.h  rational.h  vec2.h  vec3.h  vec4.h
libmind/media/: image.c  targa.h
libmind/platform/: gamepad.h  keyboard-scancode.h  keyboard.h  platform-posix.c  platform-win32.c  platform.c  platform.h
libmind/plugins/signalgen/: signalgen.c
msvc/: Bulletmind.sln  Bulletmind.vcxproj  Bulletmind.vcxproj.filters
src/: asset.c  asset.h  audio.c  audio.h  binary.c  binary.h  bitfield.h  bitflags.h  buffer.c  buffer.h  c99defs.h  command.c  command.h  engine.c  engine.h  entity.c  entity.h  font.c  font.h  imgfile.c  imgfile.h  input.c  input.h  main.c  main.c.old  main.c.old.2  main.h  math-defs.h  memalign.c  memalign.h  memarena.c  memarena.h  performance.c  performance.h  render.c  render.h  resource.c  resource.h  scancodes.h  sprite.c  (+11 more)
src/core/: algorithm.h  assert.h  asset.c  asset.h  binary.c  binary.h  bitfield.h  buffer.c  buffer.h  c99defs.h  console.h  export.h  hashmap.c  hashmap.h  intrinsics.h  logger.c  logger.h  mem_align.c  mem_align.h  mem_arena.c  mem_arena.h  memalign.c  memalign.h  memarena.c  memarena.h  memory.c  memory.h  path.c  path.h  random.c  random.h  rect.h  scancode.h  scancodes.h  string.c  string.h  system.h  tests.c  time_convert.h  timecode.c  (+11 more)
src/game/: app.c  app.h  command.c  command.h  entity.c  entity.h  main.c  scene.c
src/gfx/: camera.c  camera.h  cimgui_defs.h  dxguids.h  enums.h  geom.h  geometry.h  gfx.c  gfx.h  gfx_d3d11.c  gfx_d3d11.h  gfx_d3d11_input_layout.h  scene.c  scene.h  sprite.c  vertex.h  win32_types.h
src/gui/: gui.c  gui.h  gui_scancode.h  gui_sdl2.c  gui_usb_hid.h  gui_vkey_win32.h  gui_win32.c  key_state.c  key_state.h
src/math/: LICENSE.txt  bounds.h  mat4.c  mat4.h  math-defs.h  quat.h  types.h  utils.h  vec2.h  vec3.h  vec4.h  vqs.h
src/media/: enums.h  image.c  image.h
src/platform/: console.h  export.h  gamepad.h  input.c  input.h  keyboard-scancode.h  keyboard-vkey-win32.h  keyboard.h  mouse.h  platform-darwin.c  platform-posix.c  platform-win32.c  platform.c  platform.h  utf8.c  utf8.h
src/plugins/signalgen/: main.c
src/time/: time_convert.h
